# docs/api/openapi.yaml
@@ -398,6 +398,11 @@ paths:
         required: true
         schema:
           type: string
+      - name: Idempotency-Key
+        in: header
+        required: true
+        schema:
+          type: string
       requestBody:
         content:
           application/json:
@@ -419,6 +424,11 @@ paths:
       parameters:
       - name: id
         in: path
+        required: true
+        schema:
+          type: string
+      - name: Idempotency-Key
+        in: header
         required: true
         schema:
           type: string
